--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-.logo {
-    display: flex;
+.App{
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(90deg,#002F52 35%, #326589);
+}
+
+.App-header{
+    background-color: white;
+}
+li {
+    list-style: none;
 }
