--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,31 @@
 
 .App-header{
     background-color: white;
+    display: flex;
+    justify-content: center;
+}
+.options{
+    display: flex;
+}
+.option{
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    padding: 0 5px;
+    cursor: pointer;
+    min-width: 120px;
+}
+.icones{
+    display: flex;
+    align-items: center;
+}
+.icone{
+    margin-right: 40px;
+    width: 25px;
+    cursor: pointer;
 }
 li {
     list-style: none;
